codepkg/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>ASN_Delivery_Quantity__c</fullName>
        <label>ASN Delivery Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Account Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actions_Taken_On_This_Request__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Actions Taken On This Request</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Payment_Amount__c</fullName>
        <label>Actual Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Payment_Date__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Actual Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_beds_Total_staff__c</fullName>
        <formula>IF((Bed_to_staff_ratio_bed_staff__c / How_many_total_staff_are_you_requesting__c) &gt; 1, &apos;&gt;1&apos; , &apos;&lt;1&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional beds/Total staff</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Geolocation__c</fullName>
        <label>Address Geolocation</label>
        <scale>14</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Address_for_staff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address for staff?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Data_Staff_Assignments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Admin/Data Staff Assignments?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allows_additional_ICU_or_M_S_T_beds__c</fullName>
        <inlineHelpText>Select the highest appropriate level</inlineHelpText>
        <label>Allows additional ICU or M/S/T beds?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ICU beds</fullName>
                </value>
                <value>
                    <fullName>M/S/T beds</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Any_unmet_communication_needs__c</fullName>
        <label>Any unmet communication needs?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_by_CPO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Approved by Chief Procurement Officer</inlineHelpText>
        <label>Approved by CPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_time_of_T_to_T_for_ESI_Cat_3__c</fullName>
        <inlineHelpText>ESI = Emergency Severity Index</inlineHelpText>
        <label>Average time of &quot;T-to-T&quot; for ESI Cat.3?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt; 10 hours</fullName>
                </value>
                <value>
                    <fullName>6-10 hours</fullName>
                </value>
                <value>
                    <fullName>2-6 hours</fullName>
                </value>
                <value>
                    <fullName>0-2 hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bed_to_staff_ratio_bed_staff__c</fullName>
        <label>Additional beds possible?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_or_Wire_X_Number__c</fullName>
        <label>Check or Wire X Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clients_Anticipated_at_Site__c</fullName>
        <label>Clients Anticipated at Site?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>≥4,500 clients</fullName>
                </value>
                <value>
                    <fullName>2,000 to 4,499 clients</fullName>
                </value>
                <value>
                    <fullName>600 to 1,999 clients</fullName>
                </value>
                <value>
                    <fullName>&lt;600 clients</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_with_Locals__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Communication with Locals?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Narrative__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Narrative</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_Compliance_Checkboxes__c</fullName>
        <label>Confirm Compliance Checkboxes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community outreach and engagement was conducted for this site with a focus on highest risk communities</fullName>
                </value>
                <value>
                    <fullName>Registration process addresses limiting factors such as digital disparity, lack  of access to public transportation to site or need for a focus on disadvantaged groups</fullName>
                </value>
                <value>
                    <fullName>Site collects data on client’s demographic information</fullName>
                </value>
                <value>
                    <fullName>Site location supports highest-risk communities and underserved populations (for example, supports individuals with disabilities, limited English proficiency clients, and/or transportation restricted groups)</fullName>
                </value>
                <value>
                    <fullName>Event has a plan to monitor equitable vaccine distribution and make improvements based on evaluations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>Operational Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creator_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creator Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders(Custom) (Creator Contact)</relationshipLabel>
        <relationshipName>Orders_Custom1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_staff_are_needed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time staff are needed?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Notes__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Delivery Notes</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Recipient_Email_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Delivery Recipient Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Recipient_Entity_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Recipient Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Recipient_First_Name_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Delivery Recipient First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Recipient_Last_Name_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Delivery Recipient Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Recipient_Phone_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Delivery Recipient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Delivery_Recipient_Title_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Delivery Recipient Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Delivery Recipient)</relationshipLabel>
        <relationshipName>RecipientOrders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Schedule_Delivery_Date__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Delivery Schedule Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe Mission/Tasks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_have_an_active_staffing_waiver__c</fullName>
        <label>Do you have an active staffing waiver?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team nursing model in place</fullName>
                </value>
                <value>
                    <fullName>Already have a waiver</fullName>
                </value>
                <value>
                    <fullName>Have applied for a waiver</fullName>
                </value>
                <value>
                    <fullName>Have not applied for a waiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Not_Have_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Not Have Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_site_need_personnel_to_keep_ICU__c</fullName>
        <label>Need personnel to keep ICU open?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doses_Anticipated_per_Day__c</fullName>
        <label>Doses Anticipated per Day?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>≥4,500 doses</fullName>
                </value>
                <value>
                    <fullName>2,000 to 4,499 doses</fullName>
                </value>
                <value>
                    <fullName>600 to 1,999 doses</fullName>
                </value>
                <value>
                    <fullName>&lt;600 doses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doses_per_Day_Previous_Events__c</fullName>
        <label>Doses per Day Previous Events?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>≥4,500 doses</fullName>
                </value>
                <value>
                    <fullName>2,000 to 4,499 doses</fullName>
                </value>
                <value>
                    <fullName>600 to 1,999 doses</fullName>
                </value>
                <value>
                    <fullName>&lt;600 doses</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Donation_Order_Value__c</fullName>
        <label>Estimated Donation Order Value</label>
        <summarizedField>Order_Product__c.Estimated_Donation_Value__c</summarizedField>
        <summaryForeignKey>Order_Product__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expected_Payment_Amount__c</fullName>
        <label>Expected Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Payment_Date__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Expected Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Order_Id__c</fullName>
        <description>External order Id. example radinet</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISCAL_PO__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>FISCAL PO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_date_of_Event__c</fullName>
        <label>First date of Event?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;7 days from application</fullName>
                </value>
                <value>
                    <fullName>&gt;7 days from application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_state_previously_helped__c</fullName>
        <label>Has state previously helped?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_attempted_to_transfer_patients__c</fullName>
        <label>Attempted transfer in last 24 hours?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_cancelled_all_surgeries__c</fullName>
        <label>Cancelled elective surgeries?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital_Burden_Score__c</fullName>
        <label>Hospital Burden Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt; 10 or greater</fullName>
                </value>
                <value>
                    <fullName>8 to 9</fullName>
                </value>
                <value>
                    <fullName>6 to 7</fullName>
                </value>
                <value>
                    <fullName>3 to 5</fullName>
                </value>
                <value>
                    <fullName>1 to 2</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_clients_expected__c</fullName>
        <label>How many clients expected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>≥ 1,000 clients anticipated</fullName>
                </value>
                <value>
                    <fullName>500 to 999 clients anticipated</fullName>
                </value>
                <value>
                    <fullName>100 to 499 clients anticipated</fullName>
                </value>
                <value>
                    <fullName>&lt;100 clients anticipated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_clients_previously_helped__c</fullName>
        <label>How many clients previously helped?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_total_staff_are_you_requesting__c</fullName>
        <inlineHelpText>Should be same # as total staff requested</inlineHelpText>
        <label>How many total staff are you requesting?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICU_beds_available_in_the_County__c</fullName>
        <inlineHelpText>Not NICU</inlineHelpText>
        <label>ICU beds % available in the County?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>≤ 5%</fullName>
                </value>
                <value>
                    <fullName>≤ 10%</fullName>
                </value>
                <value>
                    <fullName>≤ 15%</fullName>
                </value>
                <value>
                    <fullName>≤ 20%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incident Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Name</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Health</fullName>
                </value>
                <value>
                    <fullName>Agriculture and Livestock</fullName>
                </value>
                <value>
                    <fullName>Social Services</fullName>
                </value>
                <value>
                    <fullName>Communications infrastructure</fullName>
                </value>
                <value>
                    <fullName>Construction and Trade</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Laboratories, Energy, Public Works, and Utilities</fullName>
                </value>
                <value>
                    <fullName>Hotels and Lodging</fullName>
                </value>
                <value>
                    <fullName>Logistics and Warehouse Facilities</fullName>
                </value>
                <value>
                    <fullName>Automotive and Transportation</fullName>
                </value>
                <value>
                    <fullName>Mining and Logging</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Businesses/ Office Workspaces</fullName>
                </value>
                <value>
                    <fullName>Non-emergency Medical</fullName>
                </value>
                <value>
                    <fullName>Financial Industry</fullName>
                </value>
                <value>
                    <fullName>Tribal</fullName>
                </value>
                <value>
                    <fullName>Public Safety</fullName>
                </value>
                <value>
                    <fullName>State Agency</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
                <value>
                    <fullName>EMAC / FEMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Current_User_Approver__c</fullName>
        <formula>RDMHS_Approved_By__r.Id = $User.Id
||
MHOAC_Approved_By__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User Approver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_allocation_amount_sufficient__c</fullName>
        <label>Is allocation amount sufficient?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_facility_a_specialty_center__c</fullName>
        <inlineHelpText>Examples – Level I Trauma, STEMI, stroke, etc.</inlineHelpText>
        <label>Is the facility a &quot;specialty center&quot;?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 disciplines</fullName>
                </value>
                <value>
                    <fullName>2 disciplines</fullName>
                </value>
                <value>
                    <fullName>1 discipline</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Medical_Staffing_Request__c</fullName>
        <label>Is this a Medical Staffing Request?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_for_a_GACH__c</fullName>
        <label>Is this for a GACH?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_specified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Language specified?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Task_Assignments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logistics Task Assignments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_staff_tasks__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logistics staff tasks?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MHOAC_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MHOAC Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MHOAC_Approved_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MHOAC Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mission_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Request # (If Applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_Request_Number_If_Applicable__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Mission ID (If Applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Mission #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Shipments__c</fullName>
        <label>Multiple Shipments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderAmount__c</fullName>
        <label>Order Amount</label>
        <summarizedField>Order_Product__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Order_Product__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderThresholdMeet__c</fullName>
        <label>Order Threshold Meet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Closed_Date__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Order Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Completed_Date__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Order Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Create_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Create Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <label>Order Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reddinet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>dynamics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Submitted_Date__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Order Submitted Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>